# matrix-creator-init

./: CMakeLists.txt  asound.conf  boot_modifications.txt  fpga-program.bash  install.bash  matrix-init.bash  voice_esp32_reset
cpp/: CMakeLists.txt
debian/: changelog  control  files  matrixio-creator-init.install  rules
debian/.debhelper/matrixio-creator-init/: dbgsym-build-ids
debian/.debhelper/matrixio-creator-init/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/matrixio-creator-init/dbgsym-root/usr/share/doc/: matrixio-creator-init-dbgsym
debian/matrixio-creator-init/DEBIAN/: conffiles  control  md5sums  postinst
debian/matrixio-creator-init/usr/share/matrixlabs/matrixio-devices/: em358-program.bash  firmware_info  fpga-program.bash  fpga_info  matrixlabs_edit_settings.py  matrixlabs_remove_console.py  radio-init.bash  sam3-program.bash
debian/matrixio-creator-init/usr/share/matrixlabs/matrixio-devices/blob/: ZigBeeGateway
obj-aarch64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake
obj-aarch64-linux-gnu/cpp/: Makefile  cmake_install.cmake  firmware_info  fpga_info
